Fix header element spacing

--- a/view/src/styles/sass/client.scss
+++ b/view/src/styles/sass/client.scss
@@ -14,6 +14,24 @@ body{
   padding: 0;
 }
 
+input{
+  &::-webkit-input-placeholder {
+     font-style: italic;
+  }
+
+  &:-moz-placeholder {
+     font-style: italic;
+  }
+
+  &::-moz-placeholder {
+     font-style: italic;
+  }
+
+  &:-ms-input-placeholder {
+     font-style: italic;
+  }
+}
+
 .search-wrap{
   & > .rslt-view:not(:empty){
     @extend .border-box;
