--- a/view/src/styles/sass/header.scss
+++ b/view/src/styles/sass/header.scss
@@ -7,6 +7,7 @@
   padding-right: 40px;
   background-color: $theme-color;
   display: inline-flex;
+  justify-content: space-between;
   position: fixed;
   top: 0;
   left: 0;
@@ -14,7 +15,6 @@
 
 .header-elem-wrapper{
   @extend .center-inline-elem;
-  width: 100%;
   height: $common-size;
 
   & > i{
@@ -24,7 +24,6 @@
   }
 
   & > .title{
-    width: 100%;
     color: white;
     font-size: 18px;
     font-weight: 500;
@@ -32,8 +31,12 @@
 }
 
 .header-search-wrap{
-  & .input-wrap > .search-field{
-    width: 350px;
+  & .input-wrap{
+    margin-left: 10px;
+    margin-right: 10px;
+    & > .search-field{
+      width: 350px;
+    }
   }
 }
 
